2004-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Use ExportImagePixelArea to
	write grayscale and colormapped output.
	* magick/constitute.c (ImportImagePixelArea): Implemented support
	for GrayInvertedQuantum & GrayInvertedAlphaQuantum.
	(ExportImagePixelArea): Implemented support for
	GrayInvertedQuantum & GrayInvertedAlphaQuantum.
	* magick/constitute.h (enum QuantumType): Added
	GrayInvertedQuantum & GrayInvertedAlphaQuantum to support
	min-is-white gray images.

2004-08-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/tiff/write.t: Adjusted file naming.
	* PerlMagick/t/tiff/read.t: Added more tests.
	* coders/tiff.c (ReadTIFFImage): Use ImportImagePixelArea to read
	PseudoClass tiff.
	(WriteTIFFImage): Allow user to set the bits-per-sample define to
	any value in the range of 1 to 32.
	(ReadTIFFImage): Fix endian-reordering for DirectClass read and
	bits-per-sample values ranging 9-15.
	* coders/rgb.c: Support reading & writing 32-bit depths for raw
	RGB images.
	* coders/cmyk.c: Support reading & writing 32-bit depths for raw CMYK
	images.
	* coders/gray.c: Support reading & writing 32-bit depths for raw gray
	images.
	* magick/deprecate.c (PopImagePixels): Deprecated function.
	(PushImagePixels): Deprecated function.
	* magick/constitute.c (ExportImagePixelArea): New function to
	export pixel region using specified QuantumType and
	bits-per-sample.
	(ImportImagePixelArea): New function to import pixel region using
	specified QuantumType and bits-per-sample.

2004-08-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/cache.c (ClonePixelCache): It appeared that cloning a
	disk-based pixel cache was limited to the maximum value of
	size_t. This would result in a truncated cache.  The offset type
	is changed from size_t to magick_off_t in order to avoid this.
	* configure.ac: Check to see if the 'char' type is unsigned,