@@ -1,3 +1,7 @@
+2004-08-24  Glenn Randers-Pehrson <glennrp@glennrp.com>
+	* coders/bmp.c is said to have a potential buffer overrun.
+	Patch from Cristy applied.
+
 2004-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/tiff.c (WriteTIFFImage): Use ExportImagePixelArea to
